Set tmux escape time

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,6 +10,11 @@ bind | split-window -h -c "#{pane_current_path}"
 bind - split-window -v
 bind '"' split-window -v -c "#{pane_current_path}"
 
+# nvim escape-time
+set-option -sg escape-time 10
+#set-option -sa terminal-overrides ',zsh:RGB'
+
+
 # I hate accidently changing layout
 unbind ' '
 
